# sparkx_primegen_rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs
